Add logout, Change Icons to VectorDrawable, Changes in NavDrawer, Minor settings changes
- The app now have a fully functional logout function present in the navigation drawer.
- Lots of design changes in the navigation drawer. New icons and options.
- Most icons now are VectorDrawables.
- The MainActivity is the main activity now, and checks/redirects to the Login activity if necessary.
- The NoAction style now inherits directly from AppCompat Theme. A change was made on the v21 styles, so the Status Bar keeps opaque. Had some trouble trying to change the MainActivity Title because of "<item name="windowNoTitle">true</item>", but figured it out.

--- a/app/src/main/res/drawable/ic_menu_centres.xml
+++ b/app/src/main/res/drawable/ic_menu_centres.xml
@@ -5,5 +5,5 @@
     android:viewportWidth="24.0">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z" />
+        android:pathData="M12,3L2,12l0,0h2v8c0,0.6,0.4,1,1,1h14c0.6,0,1-0.4,1-1v-8h2l0,0L12,3z M16,15h-3v3h-2v-3H8v-2h3v-3h2v3h3V15z" />
 </vector>
