--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,7 @@
         <ImageView android:src="@drawable/logo"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
+            android:paddingBottom="15dp"
             android:layout_gravity="center_horizontal" />
 
         <EditText android:id="@+id/input_email"
