--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,14 +12,14 @@
     android:theme="@style/ThemeOverlay.AppCompat.Light">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_user"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/icon_user" />
+        android:src="@drawable/ic_menu_user" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/user_name" />
