Add About and Map functionalities, Show User name
- Activity with "About Details" created and located on Toolbar item.
- Google Maps API intent that calls the Google Maps Application with a specific querry and the last location of the user.
- Now the name of the loged user is shown on the Navigation Drawer Header.
- Lots of minor UI changes.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group
-        android:id="@+id/menu_top"
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_diseases"
@@ -12,6 +11,11 @@
             android:id="@+id/nav_medicines"
             android:icon="@drawable/ic_menu_medicines"
             android:title="Medicines" />
+
+    </group>
+
+    <group
+        android:checkableBehavior="none">
         <item
             android:id="@+id/nav_centres"
             android:icon="@drawable/ic_menu_centres"
@@ -23,12 +27,7 @@
         android:checkableBehavior="none">
 
         <item
-                android:id="@+id/nav_about"
-                android:title="About" />
-
-        <item
             android:id="@+id/nav_logout"
             android:title="Logout" />
     </group>
-
 </menu>
