--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -22,6 +22,7 @@
         android:id="@+id/textView_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/user_name" />
+        android:text="@string/user_name"
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
