Add Content Fragments, Change NavDrawer Header
- Adds the remaining functionalities for the system: Home Screen, Diseases Screen and Medications Screen. Both Diseases and Medications have one fragment and one acitivity each. The app now is fully functional.

- NavDrawer header is now larger, has a Rod of Caduceus Black Icon on top and shows both user name and email. The gradient drawable was also changed.

- The use of SpannableStringBuilders was replaced with the use of <b></b> tags for the About Activity.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,13 +4,17 @@
     <group
         android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_menu_home"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_diseases"
             android:icon="@drawable/ic_menu_diseases"
             android:title="Diseases" />
         <item
-            android:id="@+id/nav_medicines"
-            android:icon="@drawable/ic_menu_medicines"
-            android:title="Medicines" />
+            android:id="@+id/nav_medications"
+            android:icon="@drawable/ic_menu_medications"
+            android:title="Medications" />
 
     </group>
 
