--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="@color/primary"
+        android:angle="90"
+        android:startColor="@color/primary"
         android:endColor="@color/primary_dark"
-        android:startColor="@color/accent"
         android:type="linear" />
 </shape>
