--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,25 +4,33 @@
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="9dp"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Light">
 
     <ImageView
-        android:id="@+id/image_user"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/ic_menu_user" />
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_menu_caduceus"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/textView_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text="@string/user_name"
+        android:textSize="20sp"
+        android:textColor="@color/primary_text" />
+
+    <TextView
+        android:id="@+id/textView_useremail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/user_name"
-        android:textColor="@android:color/white"/>
+        android:text="@string/user_email"
+        android:textSize="14sp" />
 
 </LinearLayout>
