--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="90"
         android:startColor="@color/primary"
-        android:endColor="@color/primary_dark"
+        android:endColor="@color/primary_darker"
         android:type="linear" />
 </shape>
