--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="primary">#2196F3</color>
     <color name="primary_dark">#1976D2</color>
+    <color name="primary_darker">#166ABD</color>
     <color name="primary_light">#BBDEFB</color>
     <color name="accent">#03A9F4</color>
     <color name="primary_text">#212121</color>
